--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             products.
           </h1>
           <p>
-            We only provide great products combined with excellent <br />
-            customer service. See what our satisfied customers are <br />
-            saying about our services.
+            We only provide great products combined with excellent customer
+            service. See what our satisfied customers are saying about our
+            services.
           </p>
         </div>
 
