se mejoro el responsive

--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
   <!-- ! PADRE - BODY -->
   <body>
     <!-- ! img bg -->
-    <img class="top-desktop" src="./images/bg-pattern-top-desktop.svg" alt="" />
-    <img
-      class="buttom-desktop"
-      src="./images/bg-pattern-bottom-desktop.svg"
-      alt=""
-    />
+    <div class="top-desktop"></div>
+    <div class="buttom-desktop"></div>
+
     <main class="main">
       <div class="main__container">
         <!-- ! Info container -->
